--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -697,19 +697,22 @@
        ;;                                      :foreground "#f1fa8c"))))
        )
    #+end_src
-** undo-tree
+** undo
    #+begin_src emacs-lisp
-     (use-package undo-tree
+     (use-package vundo
        :ensure t
-       :demand t
-       :delight
-       :bind ("M-/" . undo-tree-redo)
-       :custom
-       (undo-tree-auto-save-history t)
-       (undo-tree-history-directory-alist  `(("." . ,(concat user-emacs-directory
-                                                             ".cache/undo-tree-hist/"))))
+       :bind ("C-x u" . vundo))
+
+     (use-package undo-fu
+       :ensure t
+       :bind (("C-/" . undo-fu-only-undo)
+              ("M-/" . undo-fu-only-redo)))
+
+     (use-package undo-fu-session
+       :ensure t
        :config
-       (global-undo-tree-mode))
+       (setq undo-fu-session-incompatible-files '("/COMMIT_EDITMSG\\'" "/git-rebase-todo\\'"))
+       (undo-fu-session-global-mode))
    #+end_src
 ** mwim
    #+begin_src emacs-lisp
@@ -1347,7 +1350,6 @@
              (dolist (org-file (directory-files-recursively (expand-file-name "note" my:d:org-roam) "\\.org$"))
                (with-current-buffer (find-file-noselect org-file nil t nil)
                  (save-excursion
-                   (undo-tree-mode -1)
                    (goto-char (point-min))
                    (let ((draft-position (re-search-forward "^#\\+hugo_draft: false$" nil t))
                          (modified (buffer-modified-p)))
