--- a/files/emacs/README.org
+++ b/files/emacs/README.org
@@ -199,7 +199,8 @@
        (epg-pinentry-mode 'loopback)
        :config
        ;; https://www.reddit.com/r/emacs/comments/14t3jcb/anyone_seen_if_gnupg_243_encryption_with_emacs/
-       (fset 'epg-wait-for-status 'ignore))
+       ;; (fset 'epg-wait-for-status 'ignore)
+       )
 
      (use-package epa
        :after epg
@@ -1816,9 +1817,31 @@
        :ensure t
        :if (file-directory-p my:d:password-store)
        :custom
-       ((chatgpt-shell-openai-key
+       (chatgpt-shell-openai-key
          (lambda ()
-           (plist-get (nth 0 (auth-source-search :app "openai" :max 1)) :api-key)))))
+           (plist-get (nth 0 (auth-source-search :app "openai" :max 1)) :api-key))))
+
+     (use-package org-ai
+       :ensure t
+       :if (file-directory-p my:d:password-store)
+       :commands (org-ai-mode
+                  org-ai-global-mode)
+       :init
+       (add-hook 'org-mode-hook #'org-ai-mode) ; enable org-ai in org-mode
+       (org-ai-global-mode) ; installs global keybindings on C-c M-a
+       :custom
+       (org-ai-openai-api-token
+         (lambda ()
+           (plist-get (nth 0 (auth-source-search :app "openai" :max 1)) :api-key)))
+       :config
+       (setq org-ai-default-chat-model "gpt-4")
+       (setq org-roam-capture-templates
+             (append org-roam-capture-templates
+                     '(("a" "ai" plain "%?"
+                        :if-new
+                        (file+head "reference/ai/${slug}.org" "#+title: ${title}\n#+date: %U\n#+last_modified: %U\n\n#+begin_ai\n[ME]: \n#+end_ai")
+                        :immediate-finish t
+                        :unnarrowed t)))))
    #+end_src
 ** Translate
    #+begin_src emacs-lisp
